gccida/c2/reload
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload/src/reload1.c:1162:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload/src/reload1.c:1162:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload/src/reload1.c:1163:4: error: expected ';' after expression
rtx v29; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload/src/reload1.c:1163:5: error: use of undeclared identifier 'v29'
rtx v29; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload/src/reload1.c:1170:4: error: expected ';' after expression
rtx v36; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload/src/reload1.c:1170:5: error: use of undeclared identifier 'v36'
rtx v36; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload/src/reload1.c:1176:21: error: redefinition of parameter 'rtx'
void (  *v42)( rtx, rtx, void *); // rsi 
                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload/src/reload1.c:1176:26: error: expected identifier
void (  *v42)( rtx, rtx, void *); // rsi 
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload/src/reload1.c:1182:4: error: expected ';' after expression
rtx v48; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload/src/reload1.c:1182:5: error: use of undeclared identifier 'v48'
rtx v48; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload/src/reload1.c:1203:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v69; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload/src/reload1.c:1216:4: error: expected ';' after expression
rtx j; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload/src/reload1.c:1216:5: error: use of undeclared identifier 'j'
rtx j; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload/src/reload1.c:1219:6: error: use of undeclared identifier 'v85'
rtx *v85; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload/src/reload1.c:1221:4: error: expected ';' after expression
rtx v87; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload/src/reload1.c:1221:5: error: use of undeclared identifier 'v87'
rtx v87; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload/src/reload1.c:1240:4: error: expected ';' after expression
rtx v106; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload/src/reload1.c:1240:5: error: use of undeclared identifier 'v106'
rtx v106; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload/src/reload1.c:1245:4: error: expected ';' after expression
rtx v111; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload/src/obj/reload1.o] Error 1
